# image-processing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BinaryGray.hpp  ConnectedComponents.hpp  EdgeDetections.hpp  HSI.hpp  HSL.hpp  HSV.hpp  Image.h  ImageHeader.hpp  ImageProcessingFunctions.hpp  MorphologicalOperations.hpp  mein_CMYK.hpp
png/: CMakeLists.txt
src/: BinaryGray.cpp  ConnectedComponents.cpp  EdgeDetections.cpp  HSI.cpp  HSL.cpp  HSV.cpp  Image.cpp  ImageProcessingFunctions.cpp  MorphologicalOperations.cpp  main.cpp  mein_CMYK.cpp
tests/: dimension.cpp  hsv.cpp  load.cpp  morphological.cpp
zlib/: CMakeLists.txt
